# ApprovalTests.cpp.StarterProject

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  create_visual_studio_project.bat  install.windows.ps1  notes_on_cmake.txt
.github/workflows/: build-and-test-via-cmake.yml  build-and-test-visual-studio-solutions.yml  build_vs.yml  github_actions_build.yml
code/: CMakeLists.txt  YourCodeGoesHere.h
lib/: ApprovalTests.hpp  ApprovalTests.v.0.1.0.hpp  ApprovalTests.v.0.2.0.hpp  ApprovalTests.v.0.3.0.hpp  ApprovalTests.v.1.0.0.hpp  ApprovalTests.v.1.1.0.hpp  ApprovalTests.v.10.0.0.hpp  ApprovalTests.v.10.1.0.hpp  ApprovalTests.v.10.1.1.hpp  ApprovalTests.v.10.1.2.hpp  ApprovalTests.v.10.10.0.hpp  ApprovalTests.v.10.2.0.hpp  ApprovalTests.v.10.3.0.hpp  ApprovalTests.v.10.4.0.hpp  ApprovalTests.v.10.5.0.hpp  ApprovalTests.v.10.5.1.hpp  ApprovalTests.v.10.7.0.hpp  ApprovalTests.v.10.7.1.hpp  ApprovalTests.v.10.9.0.hpp  ApprovalTests.v.10.9.1.hpp  ApprovalTests.v.2.0.0.hpp  ApprovalTests.v.2.1.0.hpp  ApprovalTests.v.3.0.0.hpp  ApprovalTests.v.3.1.0.hpp  ApprovalTests.v.3.1.1.hpp  ApprovalTests.v.3.2.0.hpp  ApprovalTests.v.3.3.0.hpp  ApprovalTests.v.3.4.0.hpp  ApprovalTests.v.3.4.1.hpp  ApprovalTests.v.3.5.0.hpp  ApprovalTests.v.5.0.0.hpp  ApprovalTests.v.7.0.0.hpp  ApprovalTests.v.8.1.1.hpp  ApprovalTests.v.8.2.0.hpp  ApprovalTests.v.8.3.0.hpp  ApprovalTests.v.8.7.1.hpp  ApprovalTests.v.8.8.1.hpp  ApprovalTests.v.8.9.1.hpp  ApprovalTests.v.8.9.2.hpp  ApprovalTests.v.9.0.0.hpp  (+2 more)
lib/catch2/include/catch2/: catch.hpp
lib/catch2v3/: CMakeLists.txt
tests/: CMakeLists.txt  DemoTest.DemoCombinationTestCase.approved.txt  DemoTest.cpp  NewTest.ApprovingText.approved.txt  NewTest.ApprovingWithReporters.approved.txt  NewTest.cpp  Tutorial.cpp  main.cpp
visual-studio-2017/: StarterProject.sln  StarterProject.vcxproj
visual-studio-2019/: StarterProject2019.sln  StarterProject2019.vcxproj
